stateDiagram-v2
    [*] --> Pending: User initiates booking
    Pending --> Confirmed: Payment successful
    Pending --> Cancelled: Payment failed or abandoned
    Confirmed --> Cancelled: User cancels
    Confirmed --> Completed: Practice finished and attended
    Confirmed --> NoShow: Practice finished and not attended
    Cancelled --> [*]
    Completed --> [*]
    NoShow --> [*]
